...
import ProfileScreen from '../screens/ProfileScreen';

const Tab = createMaterialTopTabNavigator();

const TABS = [
  { name: 'Início', icon: 'book', component: HomeScreen },
  { name: 'Ranking', icon: 'trophy', component: RankingScreen },
  { name: 'Social', icon: 'chatbubbles', component: GroupsScreen },
  { name: 'Perfil', icon: 'person', component: ProfileScreen },
];

function CustomTabBar({ state, descriptors, navigation, isDarkMode }) {
  const activeColor = isDarkMode ? COLORS.primary.dark : COLORS.primary.light;
...
