...
import { useHomeLogic } from '@ui/hooks/useHomeLogic';

import { useThemeStore } from '../../store/useThemeStore';
import * as Haptics from '../../utils/haptics';

const TXT_WELCOME = 'Bem-vindo, ';
const TXT_DAILY_SUMMARY = 'Resumo Diário';
const TXT_READING_DAYS = 'Dias de leitura';
const TXT_LIBRARY = 'Biblioteca';
const TXT_RECENT_NOTES = 'Suas Anotações Recentes';
const TXT_START_STORY = 'Começar nova história';

const FILTERS = [
...
          <View>
            <Text className="text-text-muted-light dark:text-text-muted-dark uppercase tracking-[3px] text-xs font-bold mb-1">
              {TXT_LIBRARY}
            </Text>
          </View>
          <TouchableOpacity
            testID="add-book-trigger"
            onPress={onAddPress}
            className="bg-primary dark:bg-primary-dark w-10 h-10 rounded-full items-center justify-center">
            <Ionicons name="add" size={24} color="white" />
          </TouchableOpacity>
        </View>

...
