...

        {/* Search Input */}
        <View className="mb-2">
          <View className="flex-row items-center bg-card-light dark:bg-card-dark rounded-2xl border-2 border-primary/20 dark:border-primary-dark/20 px-4 shadow-sm">
            <Ionicons name="search" size={24} color={accentColor} />
            <TextInput
              testID="search-input"
              className="flex-1 text-text-light dark:text-text-dark p-5 text-xl font-serif"
              placeholder={
                filters.author
                  ? `Obras de ${filters.author}...`
                  : 'O que vamos ler hoje?'
              }
...
